# gptz.c

./: Android.mk  CMakeLists.txt  Makefile  README.md  README_en.md  cchat.c  chat.py  download_model.py  export_tokenizer.py  gpt.c
host/: Makefile  main.c
host/include/: gpt.h
ta/: Android.mk  Makefile  gpt_ta.c  math_ta.c  sub.mk  user_ta_header_defines.h
ta/include/: gpt_ta.h  math_ta.h  model_ta.h
